<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Permission Library</string>
    <string name="pager_title_app">App</string>
    <string name="pager_title_group">Group</string>
    <string name="pager_title_apk">Apk</string>
    <string name="app_detail_version_template">Version code: %d\nVersion name: %s</string>
    <string name="app_detail_apk_location_template">Location: %s</string>
    <string name="label_disabled">Disabled</string>
    <string name="help_title">Help</string>
    <string-array name="help_items">
        <item>@string/help_item_system_app</item>
        <item>@string/help_item_dangerous_permissions</item>
        <item>@string/help_item_change_permissions</item>
        <item>@string/help_item_lost_perm</item>
    </string-array>
    <string name="label_system">System App</string>
    <string name="help_item_system_app">What is System App?</string>
    <string name="label_system_explanation">
        Phone manufacturer makes some apps CANNOT be uninstalled or only can be disabled.</string>
    <string name="action_filter">Filter</string>
    <string name="label_normal">Normal App</string>
    <string-array name="filter_items">
        <item>@string/label_normal</item>
        <item>@string/label_system</item>
        <item>@string/label_disabled</item>
    </string-array>
    <string name="label_lost_perm">Missing Explanation</string>
    <string name="help_item_lost_perm">Why are some permissions missing explanation?</string>
    <string name="help_item_lost_perm_content">
        1. Some of them are used to be compatible with older android versions.\n
        2. Some of them are for some apps private use.\n
    </string>
    <string name="label_dangerous_permission">Dangerous Permission</string>
    <string name="help_item_dangerous_permissions">What is dangerous permission?</string>
    <string name="label_dangerous_permission_explanation">
        These permissions have something to do with your sensitive and private information.
        Malicious apps may use them to mess up your phone or steal personal data.</string>
    <string name="label_change_permissions">Change Permissions</string>
    <string name="help_item_change_permissions">
        Can I change app permissions from Permission Library?</string>
    <string name="help_item_change_permissions_content">
        No. Since only system setting can change apps\' permissions,
        you can click the wrench mark on the top-right corner
        when you check an app\'s detail to go to system setting quickly.
    </string>
    <string name="about_title">About</string>
    <string name="first_time_launch_text">The first boot time may be a little longer :)</string>
    <string name="list_empty">Nothing here</string>
    <string name="action_title_install_app">Install APK</string>
    <string name="fail_to_pick_apk">No file explorer found. Picking APK fails.</string>
    <string name="action_title_app_setting">App Setting</string>
    <string name="action_title_show_perm_detail">Permission Detail</string>
    <string name="action_title_delete_apk">Delete APK</string>
    <string name="delete_apk_assure">Are you sure to delete this APK?</string>
    <string name="delete_apk_ok">APK deleted</string>
    <string name="delete_apk_fails">Deletion fails</string>
    <string name="permission_external_storage">Read external Storage permission is needed to scan apk files</string>
    <string name="permission_delete_apk">Write external Storage permission is needed to delete apk</string>
    <string name="permission_state_on">Enabled</string>
    <string name="permission_state_off">Disabled</string>
    <string name="rate_title">Are you enjoying Permission Library?</string>
    <string name="rate_content">How about taking a moment to
        rate this app, let others know and make our world better?</string>
    <string name="rate_later">Later</string>
    <string name="rate_no">No</string>
    <string name="update_title">Update</string>
    <string-array name="update_items">
        <item><h>Improvement</h> Remove some redundant animation</item>
        <item><h>Improvement</h> Swipe down to reload apps and APKs</item>
        <item><h>Improvement</h> Click APK location to view it in an explorer(no response? install an explorer app)</item>
    </string-array>
    <string name="a11y_icon" translatable="false">Item icon</string>
    <string name="a11y_go_to_detail" translatable="false">Check item detail</string>
    <string name="a11y_empty_list" translatable="false">Current list is empty</string>
    <string name="a11y_search_apks" translatable="false">Search APK files on this device</string>
    <string name="a11y_pick_apk" translatable="false">Pick APK file on this device</string>
    <string name="crash_email_subject">Hey, I found a bug of Permission Library!</string>
    <string name="crash_title">Permission Library has crashed!</string>
    <string name="crash_content">Would you mind sending me the crash report through email\nso I can fix it?</string>
    <string name="crash_restart">Restart App</string>
    <string name="crash_detail">Crash Detail</string>
    <string name="crash_send">Send it by email</string>
    <string name="empty_string" translatable="false" />
    <plurals name="list_item_perm_count" formatted="false">
        <item quantity="zero">No permission</item>
        <item quantity="one">1 permission</item>
        <item quantity="other"><xliff:g example="7" id="number">%d</xliff:g> permissions</item>
    </plurals>
    <plurals name="list_item_app_count" formatted="false">
        <item quantity="zero">No application</item>
        <item quantity="one">1 application</item>
        <item quantity="other"><xliff:g example="7" id="number">%d</xliff:g> applications</item>
    </plurals>
    <string name="group_desp_calendar">Calendar</string>
    <string name="group_desp_camera">Camera</string>
    <string name="group_desp_contacts">Contacts</string>
    <string name="group_desp_location">Location</string>
    <string name="group_desp_microphone">Microphone</string>
    <string name="group_desp_phone">Phone</string>
    <string name="group_desp_sensors">Sensors</string>
    <string name="group_desp_sms">SMS</string>
    <string name="group_desp_storage">Storage</string>
    <string name="group_desp_network">Network</string>
    <string name="group_desp_other1">Other</string>
    <string name="group_desp_launcher">Launcher Related</string>
    <string name="group_desp_guess">Guess usage from their content</string>
    <string name="group_desp_removed">Backwards compatibility</string>
    <string name="group_desp_other">Other\'s other</string>
    <string-array name="perm_item_copy_options">
        <item>Copy name</item>
        <item>Copy short description</item>
        <item>Copy long description</item>
        <item>Copy all</item>
        <item>Check this permission in the official doc</item>
    </string-array>
    <string name="toast_check_in_doc">Permission copied. Please search the permission in the opened page.</string>
    <string name="permlab_accessCoarseLocation">Access approximate location(network-based)</string>
    <string name="permdesc_accessCoarseLocation">This app can get your location based on network sources such as cell towers and Wi-Fi networks. These location services must be turned on and available on your phone for the app to be able to use them.</string>
    <string name="permlab_accessFineLocation">Access precise location (GPS and network-based)</string>
    <string name="permdesc_accessFineLocation">This app can get your location based on GPS or network location sources such as cell towers and Wi-Fi networks. These location services must be turned on and available on your phone for the app to be able to use them. This may increase battery consumption.</string>
    <string name="permlab_accessLocationExtraCommands">Access extra location provider commands</string>
    <string name="permdesc_accessLocationExtraCommands">Allows the app to access
        extra location provider commands.  This may allow the app to interfere
        with the operation of the GPS or other location sources.</string>
    <string name="permlab_addVoicemail">Add voicemail</string>
    <string name="permdesc_addVoicemail">Allows the app to add messages
      to your voicemail inbox.</string>
    <string name="permlab_answerPhoneCalls">Answer phone calls</string>
    <string name="permdesc_answerPhoneCalls">Allows the app to answer an incoming phone call.</string>
    <string name="permlab_bodySensors">Access body sensors (like heart rate monitors)</string>
    <string name="permdesc_bodySensors">Allows the app to access data from sensors
    that monitor your physical condition, such as your heart rate.</string>
    <string name="permlab_callPhone">Directly call phone numbers</string>
    <string name="permdesc_callPhone">Allows the app to call phone numbers
      without your intervention. This may result in unexpected charges or calls.
      Note that this doesn\'t allow the app to call emergency numbers.
      Malicious apps may cost you money by making calls without your
      confirmation.</string>
    <string name="permlab_camera">Take pictures and videos</string>
    <string name="permdesc_camera">This app can take pictures and record videos using the camera at any time.</string>
    <string name="permlab_getAccounts">Find accounts on the device</string>
    <string name="permdesc_getAccounts" product="default">Allows the app to get
      the list of accounts known by the phone.  This may include any accounts
      created by applications you have installed.</string>
    <string name="permlab_manageOwnCalls">Route calls through the system</string>
    <string name="permdesc_manageOwnCalls">Allows the app to route its calls through the system in
        order to improve the calling experience.</string>
    <string name="permlab_processOutgoingCalls">Reroute outgoing calls</string>
    <string name="permdesc_processOutgoingCalls">Allows the app to see the
        number being dialed during an outgoing call with the option to redirect
        the call to a different number or abort the call altogether.</string>
    <string name="permlab_readCalendar">Read calendar events and details</string>
    <string name="permdesc_readCalendar">This app can read all calendar events stored on your phone and share or save your calendar data.</string>
    <string name="permlab_readCallLog">Read call log</string>
    <string name="permdesc_readCallLog">This app can read your call history.</string>
    <string name="permlab_readContacts">Read your contacts</string>
    <string name="permdesc_readContacts">Allows the app to
      read data about your contacts stored on your phone, including the
      frequency with which you\'ve called, emailed, or communicated in other ways
      with specific individuals. This permission allows apps to save your
      contact data, and malicious apps may share contact data without your
      knowledge.</string>
    <string name="permlab_readExternalStorage">Read the contents of your SD card</string>
    <string name="permdesc_readExternalStorage">Allows the app to read the contents of your SD card.</string>
    <string name="permlab_readPhoneNumbers">Read phone numbers</string>
    <string name="permdesc_readPhoneNumbers">Allows the app to access the phone numbers of the device.</string>
    <string name="permlab_readPhoneState">Read phone status and identity</string>
    <string name="permdesc_readPhoneState">Allows the app to access the phone
      features of the device.  This permission allows the app to determine the
      phone number and device IDs, whether a call is active, and the remote number
      connected by a call.</string>
    <string name="permlab_readSms">Read your text messages (SMS or MMS)</string>
</resources>